<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Real Appraiser</string>
    <string name="google_maps_key">AIzaSyC-tqRdJVSb61YvJfhk0kG8saQdMTq6V6o</string>
    <string name="url">Current Server URL</string>
    <string name="realappraiser_brand">Real Appraiser All Rights Reserved \nDeveloped and Supported by Real Appraiser.</string>
    <string name="serverProblem">Server Connection Problem</string>
    <string name="something_wrong">Poor Internet connectivity</string>
    <string name="validurl">Enter valid url</string>
    <string name="http">https://</string>
    <string name="addimage">ADD IMAGE</string>
    <string name="forgotpwd" tools:ignore="UnusedResources"><i><u>Forgot Password</u></i></string>
    <string name="seturl" tools:ignore="UnusedResources"><i><u>Set Server URL</u></i></string>
    <string name="hi">Hi</string>
    <string name="title">Real Appraiser</string>
    <string name="latlng">LAT/LONG</string>
    <string name="lat" tools:ignore="UnusedResources">Lat</string>
    <string name="lng" tools:ignore="UnusedResources">Long</string>
    <string name="case_id"></string>
    <string name="case_date"></string>
    <string name="case_time"></string>
    <string name="pipesymbol">|</string>
    <string name="bankname"></string>
    <string name="casename"></string>
    <string name="case_mobileno"></string>
    <string name="case_addressloc"></string>
    <string name="property_exists">Are you sure that property is not exists?</string>
    <string name="property_exists_text">Are you sure that property is not exists?</string>
    <string name="property_has_exists">Property exists</string>
    <string name="property_not_exists">Property Doesn\'t exists</string>
    <string name="caserejected">Case Rejected</string>
    <string name="reject_text">Do you want to reject the case?</string>
    <string name="admin_text">Do you want to send the case to Report maker?</string>
    <string name="admin_text_kakode">Do you want to send the case to Case Admin?</string>
    <string name="property_type">Select the property type for the Case Id : </string>
    <string name="property_type_">Property Type</string>
    <string name="image_view">Image Viewer for the Case Id : </string>
    <string name="document_view">Document Viewer for the Case Id : </string>
    <string name="exit_back">Please click BACK again to exit</string>
    <string name="forgotpassword" tools:ignore="UnusedResources">Forgot Password</string>
    <string name="property_type_head">Property Type :</string>
    <string name="wrong_password">User ID or Password is wrong</string>
    <string name="fetching_loca" tools:ignore="TypographyEllipsis">Fetching your current location. Please wait...</string>
    <string name="fetching_prev_loca" tools:ignore="TypographyEllipsis">Fetching your previous marked location. Please wait...</string>
    <string name="genearating_floors" tools:ignore="TypographyEllipsis">Generating your Floors. Please wait...</string>
    <string name="stage_type">Stage type</string>
    <string name="not_validuser">Not a valid user</string>
    <string name="offlinecase_head">Select Cases</string>
    <string name="noofflinecase">No More Cases to move Offline</string>
    <string name="accept">ACCEPT</string>
    <string name="reject">REJECT</string>
    <string name="sync">SYNC</string>
    <string name="start" tools:ignore="UnusedResources">START</string>
    <string name="startInspection">START INSPECTION</string>
    <string name="edit">EDIT</string>
    <string name="send">SEND</string>
    <string name="location_enable" tools:ignore="UnusedResources">Location Services Enable</string>
    <string name="location_service" tools:ignore="UnusedResources">Real Appraiser shows your current location, please enable location authorisation</string>
    <string name="enable" tools:ignore="UnusedResources">Turn on Location</string>
    <string name="err_msg_serverurl">Enter Current Server Url</string>
    <string name="err_msg_lastname" tools:ignore="UnusedResources">Enter your last name</string>
    <string name="err_msg_company" tools:ignore="UnusedResources">Enter your Company name</string>
    <string name="err_msg_mobile" tools:ignore="UnusedResources">Enter your mobile no.</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_ctmsg_password" tools:ignore="UnusedResources">Enter current password</string>
    <string name="err_new_password" tools:ignore="UnusedResources">Enter new password</string>
    <string name="err_msg_confirmpassword" tools:ignore="UnusedResources">Enter the confirm password</string>
    <string name="err_msg_mismatchpassword" tools:ignore="UnusedResources">Oops, your confirm password mismatched</string>
    <string name="open">OPEN</string>
    <string name="close">CLOSED</string>
    <string name="close_new">Close</string>
    <string name="offline">OFFLINE</string>
    <string name="gooffline">GO OFFLINE</string>
    <string name="cancel">CLOSE</string>
    <string name="cancel_">CANCEL</string>
    <string name="property_exits">19</string>
    <string name="accept_status">13</string>
    <string name="reject_status">15</string>
    <string name="start_inspection" tools:ignore="UnusedResources">2</string>
    <string name="edit_inspection">2</string>
    <string name="send_to_admin">21</string>
    <string name="send_to_admin_kakode">3</string>
    <string name="branch">Choose Branch</string>
    <string name="qc">Quality Check</string>
    <string name="save_dashboard">SAVE &amp; GOTO DASHBOARD</string>
    <string name="save">SAVE</string>
    <string name="next">NEXT</string>
    <string name="address">ADDRESS</string>
    <string name="addr_perdoc">Address per document*</string>
    <string name="addr_site">Address at Site/Actual*</string>
    <string name="landmark">Landmark</string>
    <string name="offlinecaselimited">Select the offline cases are equal to </string>
    <string name="alreadyexceeded">Maximum offline cases reached! </string>
    <string name="select_one_case">Select only one case</string>
    <string name="synchedmsg">Case successfully synched to server</string>
    <string name="same">Same</string>
    <string name="servey_persence">Survey in presence of</string>
    <string name="plotno">Plot No</string>
    <string name="select_localitycate" tools:ignore="UnusedResources">Select Locality Category</string>
    <string name="select_class" tools:ignore="UnusedResources">Select Class</string>
    <string name="select">Select</string>
    <string name="select_tenure_ownership" tools:ignore="UnusedResources">Select Tenure/Ownership</string>
    <string name="landapproval">Land approval for</string>
    <string name="property_identified">Property identified through</string>
    <string name="persently_occupied">Presently Occupied</string>
    <string name="condition_approad">Condition of Approach road</string>
    <string name="localitycate">Locality Category</string>
    <string name="class_head">Class</string>
    <string name="tenureownership">Tenure / Ownership - Land</string>
    <string name="actualusage">Actual Usage</string>
    <string name="documents">Property Documents</string>
    <string name="enter_custom_valu_one" tools:ignore="UnusedResources">Enter Custom value</string>
    <string name="document_boundary">Document Boundary</string>
    <string name="unit_boundary_doc">Unit Boundary as per document</string>
    <string name="unit_boundary_actual">As per Site - For flat</string>
    <string name="actual_boundary">As per site - Building/House</string>
    <string name="same_as_docs">Same as Doc</string>
    <string name="document_dimension">Document Dimension</string>
    <string name="actual_dimension">Dimension as per actual</string>
    <string name="east">East</string>
    <string name="west">West</string>
    <string name="north">North</string>
    <string name="south">South</string>
    <string name="document_setback">Document Setback</string>
    <string name="actual_setback">Actual Setback</string>
    <string name="front">Front</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="rear">Rear</string>
    <string name="proximity">Proximity - civic, social commercial facilities</string>
    <string name="proximities">Proximities</string>
    <string name="name_head">Name</string>
    <string name="km">Distance</string>
    <string name="plot_demarcated">Plot demarcated at site</string>
    <string name="isproperty_demolish">Is Property in demolition risk?</string>
    <string name="property_within_muni">Property with in Municipal Area</string>
    <string name="property_details">Property Details</string>
    <string name="is_compounded">Is Compounded?</string>
    <string name="land_measurement">Land Measurement:</string>
    <string name="compound_permissiblearea">Document Area*</string>
    <string name="as_per_measurement">As Per Measurement*</string>
    <string name="as_per_docs">As Per Document*</string>
    <string name="measurement">Measurement</string>
    <string name="construction_details">Construction Details:</string>
    <string name="floors">#Floor(s)*</string>
    <string name="approved_floors">#Approved Floors(s)*</string>
    <string name="actual_usage" tools:ignore="UnusedResources">Actual Usage</string>
    <string name="Floor_details">Floor Details</string>
    <string name="land_area" tools:ignore="UnusedResources">Land Area</string>
    <string name="floor_digits" tools:ignore="UnusedResources">1234567</string>
    <string name="totalapartmentfloors">Apartment Floors</string>
    <string name="totalapartment_no_floors_ka">Total No of Floors</string>
    <string name="totalflatsperfloor">Flat / Floor</string>
    <string name="totalflatsperfloor_ka">Total Flats Per Floor</string>
    <string name="flatsituatedinfloor">Flat in Floors*</string>
    <string name="flatsituatedinfloor_ka">Flat Situated In Floor*</string>
    <string name="plot_area">Plot Area</string>
    <string name="units">Unit</string>
    <string name="title_photo">Title</string>
    <string name="generl_info_measu">General Info and Measurement:</string>
    <string name="generl_info" tools:ignore="UnusedResources">General Info:</string>
    <string name="floor_name">Floor Name*</string>
    <string name="floor_">Floor*</string>
    <string name="stage">Stage*</string>
    <string name="comp" tools:ignore="StringFormatInvalid">%Comp*</string>
    <string name="progress">Progress</string>
    <string name="doc_area">Doc Area</string>
    <string name="per_area">Sanctioned Area</string>
    <string name="actual_area">Actual Area</string>
    <string name="age">Age</string>
    <string name="life">Life</string>
    <string name="floor_usage">Usage</string>
    <string name="carpetarea">Carpet Area</string>
    <string name="builduparea">Buildup Area</string>
    <string name="enter_your_mail" tools:ignore="UnusedResources">Enter Your Email id</string>
    <string name="complete">Complete</string>
    <string name="underconstruction">Under Construction</string>
    <string name="ok">OK</string>
    <string name="version_name">Version:</string>
    <string name="release_date">Release Date:</string>
    <string name="version_name1">2.1.6</string>
    <string name="release_date1">08-Oct-2023</string>
    <string name="create_case">CREATE CASE</string>
    <string name="go_offline">GO OFFLINE</string>
    <string name="about">ABOUT</string>
    <string name="non_case_activity">NON CASE ACTIVITY</string>
    <string name="convenyance_report">CONVEYANCE REPORT</string>
    <string name="raiseticketsystem">TICKET RAISE</string>
    <string name="viewticket">VIEW TICKETS</string>
    <string name="submit">Submit</string>
    <string name="qc_completed">QC Completed</string>
    <string name="qc_hold">QC Hold</string>
</resources>