<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/ic_home"
        android:icon="@drawable/home"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction,MenuTitle" />
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/refresh"
        app:showAsAction="always"
        tools:ignore="MenuTitle" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/logout"
        app:showAsAction="always"
        tools:ignore="MenuTitle" />
    <item
        android:id="@+id/filter"
        android:icon="@drawable/filter_icon"
        app:showAsAction="always"
        tools:ignore="MenuTitle"/>
    <item
        android:id="@+id/dropdown_menu"
        android:icon="@drawable/menu_version"
        android:theme="@style/OverflowMenu"
        android:title="Menu"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/create"
                android:icon="@drawable/ic_create"
                android:theme="@style/OverflowMenu"
                android:title="@string/create_case"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/gooffline_case"
                android:icon="@drawable/ic_go_offline"
                android:theme="@style/OverflowMenu"
                android:title="@string/go_offline"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/versionname"
                android:icon="@drawable/ic_about"
                android:theme="@style/OverflowMenu"
                android:title="@string/about"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/noncaseactivity"
                android:icon="@drawable/non_activity_report"
                android:theme="@style/OverflowMenu"
                android:title="@string/non_case_activity"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/convyencereport"
                android:icon="@drawable/report"
                android:theme="@style/OverflowMenu"
                android:title="@string/convenyance_report"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/raiseticketsystem"
                android:icon="@drawable/recreate_ticket"
                android:theme="@style/OverflowMenu"
                android:title="@string/raiseticketsystem"
                app:showAsAction="ifRoom"
                android:visible="false"/>

            <item
                android:id="@+id/viewticket"
                android:icon="@drawable/view_tickets"
                android:theme="@style/OverflowMenu"
                android:title="@string/viewticket"
                app:showAsAction="ifRoom"
                android:visible="false"
                />
            <item
                android:id="@+id/changepassword"
                android:icon="@drawable/lock"
                android:theme="@style/OverflowMenu"
                android:title="CHANGE PASSWORD"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>