<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:src="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/versionnametext"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/version_name"
                android:gravity="end"
                android:textColor="@color/Gray"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/versionname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_name1"
                android:layout_marginStart="7dp"
                android:textColor="@color/Activite"
                android:textSize="20sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/releasedatetext"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:text="@string/release_date"
                android:textColor="@color/Gray"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/releasedate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="7dp"
                android:text="@string/release_date1"
                android:textColor="@color/Activite"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/okBtn"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/buttonshape"
            android:text="@string/ok"
            android:textSize="20sp"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>