<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:ignore="UnusedResources">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/forgotpasswordtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/forgotpassword"
        android:textColor="@color/font_heading"
        android:textSize="@dimen/font_extra_large"  />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="50dp"
        android:textColorHint="@color/font_texthint">

        <EditText
            android:id="@+id/forgotpasswordeditTextEmail"
            style="@style/StyledTilEditText"
            android:hint="@string/enter_your_mail"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/font_medium"
            android:imeOptions="actionDone|flagNoExtractUi"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/forgotpasswordbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/buttonshape"
        android:gravity="center"
        android:paddingEnd="60dp"
        android:paddingStart="60dp"
        android:text="SUBMIT"
        android:textColor="@color/White"
        android:textSize="@dimen/font_large"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:text="@string/realappraiser_brand"
        android:textColor="@color/font_heading"
        android:textSize="@dimen/font_large"  />
</LinearLayout>