<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_10"
            android:layout_marginBottom="@dimen/height_5"
            android:fontFamily="@font/medium"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/qc"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_18sdp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/height_15"
            android:layout_marginEnd="@dimen/height_15"
            android:orientation="vertical"
            android:weightSum="2">


            <RadioGroup
                android:id="@+id/rgQC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbQcC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/qc_completed"
                    android:textColor="@color/Activite"
                    android:checked="false"
                    android:layout_margin="@dimen/_5sdp"
                    android:theme="@style/AppTheme"
                    android:fontFamily="@font/medium"/>

                <RadioButton
                    android:id="@+id/rbQcH"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/qc_hold"
                    android:checked="false"
                    android:layout_margin="@dimen/_5sdp"
                    android:textColor="@color/Activite"
                    android:theme="@style/AppTheme"
                    android:fontFamily="@font/medium"/>

            </RadioGroup>


            <EditText
                android:id="@+id/etNotes"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/_100sdp"
                android:background="@drawable/border_grey"
                android:hint="QC Notes"
                android:gravity="top|start"
                android:fontFamily="@font/regular"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/Activite"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_25sdp"
            android:orientation="horizontal"
            android:weightSum="2">


            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:background="@drawable/strokeshape_bg"
                android:fontFamily="@font/medium"
                android:paddingStart="@dimen/_20sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/cancel_"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />


            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@drawable/buttonshape"
                android:fontFamily="@font/medium"
                android:paddingStart="@dimen/_20sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>