<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10sdp"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/control_padding">


        <TextView
            android:id="@+id/textview_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/document_boundary"
            android:textColor="@color/white"
            android:textSize="@dimen/font_medium"
            android:textStyle="normal"
            android:background="@drawable/cardview_dialog_layout"
            />

       <!-- <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/height_4"
            android:layout_marginTop="@dimen/height_8"
            android:background="@color/line"></View>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/popup_white_rec_bg">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:visibility="visible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_12"
            android:layout_marginLeft="@dimen/height_20"
            android:layout_marginRight="@dimen/height_20"
            android:layout_marginBottom="@dimen/height_10"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/height_30"
                android:layout_marginEnd="@dimen/height_30"
                android:layout_weight="1"
                android:background="@drawable/strokeshape_bg"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/font_medium"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/height_30"
                android:layout_marginEnd="@dimen/height_30"
                android:layout_weight="1"
                android:background="@drawable/buttonshape"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="@dimen/font_medium"
                tools:ignore="ButtonStyle,UnusedAttribute" />
        </LinearLayout>
    </LinearLayout>

    </LinearLayout>
</ScrollView>