<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:ignore="Overdraw">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cardview_dialog_layout"
            >

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stage_type"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                />

            <ImageView
                android:id="@+id/close"
                app:srcCompat="@drawable/ic_close_pop_up"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:padding="@dimen/height_2"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                tools:ignore="ContentDescription,RtlHardcoded" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/popup_white_rec_bg"
            >

            <RadioGroup
                android:id="@+id/id_radiogroup_stage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/height_4"
                android:layout_marginTop="@dimen/height_4"
                android:orientation="vertical"
                tools:ignore="UselessParent"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                >

                <RadioButton
                    android:id="@+id/id_radio_complete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/height_2"
                    android:layout_marginBottom="@dimen/height_2"
                    android:checked="false"
                    android:paddingLeft="@dimen/height_8"
                    android:text="@string/complete"
                    android:textSize="@dimen/font_medium"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

                <RadioButton
                    android:id="@+id/id_radio_underconstruction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/height_2"
                    android:layout_marginBottom="@dimen/height_2"
                    android:checked="false"
                    android:paddingLeft="@dimen/height_8"
                    android:text="@string/underconstruction"
                    android:textSize="@dimen/font_medium"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />
            </RadioGroup>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>